# ez-jni-rs

./: Cargo.toml  Changelog.md  LICENSE  README.md
.github/workflows/: rust.yml
jni_macros/: Cargo.toml  README.md
jni_macros/src/: call.rs  exception.rs  jni_fn.rs  lib.rs  object.rs  private.rs  types.rs  utils.rs
jni_macros/src/object/: class.rs  exception.rs  mod.rs
jni_macros/src/utils/: mod.rs  step.rs
src/: __throw.rs  error.rs  hints.rs  jvalue.rs  lib.rs  object.rs  throw.rs  types.rs  utils.rs
src/__throw/: backtrace.rs  call.rs  jni_fn.rs  mod.rs
src/me/ezjni/: RustPanic.java
src/me/marti/ezjni/: PanicLocation.java  RustPanic.java
src/object/: array.rs  impl.rs  impl_array.rs  impl_exception.rs  mod.rs
src/object/array/: element.rs  mod.rs
src/utils/: array.rs  call.rs  mod.rs  object.rs
tests/: Test.java  call.rs  call_fail.rs  from_exception.rs  jni_fn.rs  object.rs  object_fail.rs
tests/common/: compile_fail.rs  mod.rs
tests/native_test/: Cargo.toml
tests/native_test/src/: Native.java  lib.rs
utils/: Cargo.toml  lib.rs
