[package]
name = "ez_jni"
version = "0.7.1"
edition = "2024"
description = "Macros and functions that make using Java in rust feel natural"
repository = "https://github.com/Megadash452/ez-jni-rs"
license = "MIT"

[workspace]
members = [
    "jni_macros",
    "utils",
    "tests/native_test"
]

[workspace.dependencies]
ez_jni = { path = "./" }
jni = { version = "0.21.1", features = ["invocation"] }
proc-macro2 = "1.0.87"
quote = "1.0.37"
syn = { version = "2.0.72" }
utils = { path = "./utils", package = "ez_jni_general_utils", version = "0.1.0" }
itertools = "0.13.0"

[dependencies]
cfg-if = "1.0.0"
either = "1.13.0"
jni = { version = "0.21", default-features = false }
ez_jni_macros = { path = "./jni_macros", version = "0.7.1" }
thiserror = "1.0.63"
utils = { workspace = true }
itertools = { workspace = true }
match_t = "0.1.2"

[dev-dependencies]
jni = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
utils = { workspace = true }
trybuild = "1.0.99"
indoc = "2.0.6"
