[package]
name = "ez_jni_macros"
version = "0.5.3"
edition = "2021"
description = "Provides macros for the ez_jni crate"
repository = "https://github.com/Megadash452/ez-jni-rs"
license-file = "../LICENSE"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
either = "1.13.0"
itertools = "0.13.0"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
jni = { workspace = true }
utils = { workspace = true }

[dev-dependencies]
ez_jni = { workspace = true }
jni = { workspace = true }