[package]
name = "ez_jni_macros"
version = "0.7.0"
edition = "2024"
description = "Provides macros for the ez_jni crate"
repository = "https://github.com/Megadash452/ez-jni-rs"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
either = "1.13.0"
itertools = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
jni = { workspace = true }
utils = { workspace = true }

[dev-dependencies]
ez_jni = { workspace = true }
jni = { workspace = true }
