[package]
name = "ez_jni_general_utils"
description = "General utility functions and data that are common for the ez_jni crate, its macros, and its tests"
repository = "https://github.com/Megadash452/ez-jni-rs"
edition = "2024"
version = "0.1.1"
license = "MIT"

[lib]
name = "utils"
path = "./lib.rs"

[dependencies]
jni = { workspace = true }
